@@ -7,11 +7,10 @@
       <Unit0>
         <Filename Value="testsuite.lpr"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="27"/>
         <CursorPos X="36" Y="39"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit0>
       <Unit1>
         <Filename Value="Test1.pas"/>
@@ -48,11 +47,10 @@
       <Unit5>
         <Filename Value="Test6.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="128"/>
         <CursorPos X="169" Y="155"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit5>
       <Unit6>
         <Filename Value="Test7.pas"/>
@@ -97,11 +95,10 @@
       <Unit11>
         <Filename Value="Test12.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="11"/>
-        <TopLine Value="240"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="106"/>
         <CursorPos Y="106"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit11>
       <Unit12>
         <Filename Value="Test13.pas"/>
@@ -160,11 +157,10 @@
       <Unit19>
         <Filename Value="testApp/TestApplication.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="1000"/>
         <CursorPos X="25" Y="1016"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
       </Unit19>
       <Unit20>
         <Filename Value="FBTestApp.pas"/>
@@ -223,11 +219,10 @@
       </Unit26>
       <Unit27>
         <Filename Value="../client/FBClientAPI.pas"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="660"/>
         <CursorPos X="41" Y="680"/>
         <UsageCount Value="100"/>
-        <Loaded Value="True"/>
       </Unit27>
       <Unit28>
         <Filename Value="../IBUtils.pas"/>
@@ -238,17 +233,16 @@
       </Unit28>
       <Unit29>
         <Filename Value="../client/FBSQLData.pas"/>
-        <EditorIndex Value="2"/>
-        <TopLine Value="3417"/>
-        <CursorPos X="3" Y="3420"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="2437"/>
+        <CursorPos X="47" Y="2453"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="2437"/>
-          <CursorPos X="47" Y="2453"/>
+          <TopLine Value="3417"/>
+          <CursorPos X="3" Y="3420"/>
         </ExtraEditor1>
         <UsageCount Value="52"/>
-        <Loaded Value="True"/>
       </Unit29>
       <Unit30>
         <Filename Value="../client/FBMessages.pas"/>
@@ -279,25 +273,23 @@
       </Unit32>
       <Unit33>
         <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
-        <EditorIndex Value="14"/>
-        <TopLine Value="496"/>
-        <CursorPos Y="509"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="467"/>
+        <CursorPos X="96" Y="479"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="467"/>
-          <CursorPos X="96" Y="479"/>
+          <TopLine Value="496"/>
+          <CursorPos Y="509"/>
         </ExtraEditor1>
         <UsageCount Value="84"/>
-        <Loaded Value="True"/>
       </Unit33>
       <Unit34>
         <Filename Value="../client/2.5/FB25ClientAPI.pas"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="333"/>
         <CursorPos X="158" Y="338"/>
         <UsageCount Value="35"/>
-        <Loaded Value="True"/>
       </Unit34>
       <Unit35>
         <Filename Value="/usr/share/fpcsrc/rtl/inc/dynlibs.pas"/>
@@ -308,17 +300,16 @@
       </Unit35>
       <Unit36>
         <Filename Value="../client/FBAttachment.pas"/>
-        <EditorIndex Value="5"/>
-        <TopLine Value="1116"/>
-        <CursorPos X="51" Y="1142"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="1145"/>
+        <CursorPos Y="1161"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="1145"/>
-          <CursorPos Y="1161"/>
+          <TopLine Value="1116"/>
+          <CursorPos X="51" Y="1142"/>
         </ExtraEditor1>
         <UsageCount Value="61"/>
-        <Loaded Value="True"/>
       </Unit36>
       <Unit37>
         <Filename Value="../client/FBStatement.pas"/>
@@ -375,11 +366,10 @@
       </Unit43>
       <Unit44>
         <Filename Value="../client/3.0/FB30Attachment.pas"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="377"/>
         <CursorPos Y="393"/>
         <UsageCount Value="27"/>
-        <Loaded Value="True"/>
       </Unit44>
       <Unit45>
         <Filename Value="../client/2.5/FB25Attachment.pas"/>
@@ -446,26 +436,23 @@
       </Unit53>
       <Unit54>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="15"/>
-        <TopLine Value="572"/>
-        <CursorPos X="3" Y="546"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="1392"/>
+        <CursorPos X="39" Y="1407"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="1392"/>
-          <CursorPos X="39" Y="1407"/>
+          <TopLine Value="546"/>
+          <CursorPos X="3" Y="546"/>
         </ExtraEditor1>
         <UsageCount Value="100"/>
-        <Loaded Value="True"/>
       </Unit54>
       <Unit55>
         <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="309"/>
         <CursorPos X="19" Y="322"/>
         <UsageCount Value="19"/>
-        <Loaded Value="True"/>
       </Unit55>
       <Unit56>
         <Filename Value="../client/FBOutputBlock.pas"/>
@@ -490,7 +477,7 @@
       </Unit58>
       <Unit59>
         <Filename Value="../changelog"/>
-        <CursorPos X="129" Y="19"/>
+        <CursorPos X="9" Y="18"/>
         <UsageCount Value="70"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -525,9 +512,9 @@
       </Unit62>
       <Unit63>
         <Filename Value="/usr/share/fpcsrc/rtl/objpas/sysutils/sysstrh.inc"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="2"/>
         <TopLine Value="89"/>
-        <CursorPos X="10" Y="105"/>
+        <CursorPos X="10" Y="107"/>
         <UsageCount Value="13"/>
         <Loaded Value="True"/>
       </Unit63>
@@ -701,8 +688,8 @@
       </Unit87>
       <Unit88>
         <Filename Value="/usr/share/fpcsrc/rtl/objpas/sysutils/sysstr.inc"/>
-        <EditorIndex Value="7"/>
-        <TopLine Value="627"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="618"/>
         <CursorPos X="7" Y="624"/>
         <UsageCount Value="12"/>
         <Loaded Value="True"/>
@@ -1058,19 +1045,19 @@
       </Unit136>
       <Unit137>
         <Filename Value="../client/IBUtils.pas"/>
-        <EditorIndex Value="10"/>
-        <TopLine Value="2168"/>
-        <CursorPos Y="2191"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="1"/>
+        <TopLine Value="2186"/>
+        <CursorPos X="29" Y="2203"/>
         <UsageCount Value="40"/>
         <Loaded Value="True"/>
       </Unit137>
       <Unit138>
         <Filename Value="../client/FBBlob.pas"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="351"/>
         <CursorPos Y="378"/>
         <UsageCount Value="18"/>
-        <Loaded Value="True"/>
       </Unit138>
       <Unit139>
         <Filename Value="../client/FBParamBlock.pas"/>
@@ -1277,136 +1264,57 @@
         <UsageCount Value="11"/>
       </Unit167>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="10" HistoryIndex="9">
       <Position1>
         <Filename Value="../client/IBUtils.pas"/>
-        <Caret Line="2165" TopLine="2150"/>
+        <Caret Line="2176" TopLine="2150"/>
       </Position1>
       <Position2>
         <Filename Value="../client/IBUtils.pas"/>
-        <Caret Line="2167" TopLine="2150"/>
+        <Caret Line="2177" TopLine="2150"/>
       </Position2>
       <Position3>
         <Filename Value="../client/IBUtils.pas"/>
-        <Caret Line="2168" TopLine="2150"/>
+        <Caret Line="2183" TopLine="2168"/>
       </Position3>
       <Position4>
         <Filename Value="../client/IBUtils.pas"/>
-        <Caret Line="2176" TopLine="2150"/>
+        <Caret Line="2186" TopLine="2168"/>
       </Position4>
       <Position5>
         <Filename Value="../client/IBUtils.pas"/>
-        <Caret Line="2177" TopLine="2150"/>
+        <Caret Line="2190" TopLine="2168"/>
       </Position5>
       <Position6>
         <Filename Value="../client/IBUtils.pas"/>
-        <Caret Line="2183" TopLine="2168"/>
+        <Caret Line="2191" TopLine="2168"/>
       </Position6>
       <Position7>
         <Filename Value="../client/IBUtils.pas"/>
-        <Caret Line="2186" TopLine="2168"/>
+        <Caret Line="2198" Column="18" TopLine="2176"/>
       </Position7>
       <Position8>
-        <Filename Value="../client/IBUtils.pas"/>
-        <Caret Line="2190" TopLine="2168"/>
+        <Filename Value="/usr/share/fpcsrc/rtl/objpas/sysutils/sysstrh.inc"/>
+        <Caret Line="107" Column="10" TopLine="89"/>
       </Position8>
       <Position9>
-        <Filename Value="../client/IBUtils.pas"/>
-        <Caret Line="2191" TopLine="2168"/>
+        <Filename Value="/usr/share/fpcsrc/rtl/objpas/sysutils/sysstr.inc"/>
+        <Caret Line="656" Column="32" TopLine="652"/>
       </Position9>
       <Position10>
-        <Filename Value="testApp/TestApplication.pas"/>
-        <Caret Line="1079" TopLine="1063"/>
+        <Filename Value="../client/IBUtils.pas"/>
+        <Caret Line="2201" Column="30" TopLine="2185"/>
       </Position10>
-      <Position11>
-        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
-        <Caret Line="265" Column="75" TopLine="263"/>
-      </Position11>
-      <Position12>
-        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
-        <Caret Line="91" Column="14" TopLine="91"/>
-      </Position12>
-      <Position13>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="910" Column="28" TopLine="903"/>
-      </Position13>
-      <Position14>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="566" Column="16" TopLine="549"/>
-      </Position14>
-      <Position15>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="3434" Column="3" TopLine="3431"/>
-      </Position15>
-      <Position16>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="565" Column="16" TopLine="551"/>
-      </Position16>
-      <Position17>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="332" Column="59" TopLine="304"/>
-      </Position17>
-      <Position18>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="154" Column="15" TopLine="140"/>
-      </Position18>
-      <Position19>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="566" Column="27" TopLine="555"/>
-      </Position19>
-      <Position20>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="141" Column="14" TopLine="141"/>
-      </Position20>
-      <Position21>
-        <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="914" Column="17" TopLine="899"/>
-      </Position21>
-      <Position22>
-        <Filename Value="../client/FBAttachment.pas"/>
-      </Position22>
-      <Position23>
-        <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="1128" Column="40" TopLine="1101"/>
-      </Position23>
-      <Position24>
-        <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="1130" Column="40" TopLine="1104"/>
-      </Position24>
-      <Position25>
-        <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="1132" Column="40" TopLine="1106"/>
-      </Position25>
-      <Position26>
-        <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="1138" Column="51" TopLine="1112"/>
-      </Position26>
-      <Position27>
-        <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="1140" Column="51" TopLine="1114"/>
-      </Position27>
-      <Position28>
-        <Filename Value="../client/2.5/FB25Statement.pas"/>
-        <Caret Line="357" Column="52" TopLine="348"/>
-      </Position28>
-      <Position29>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="474" Column="67" TopLine="462"/>
-      </Position29>
-      <Position30>
-        <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <Caret Line="114" Column="22" TopLine="97"/>
-      </Position30>
     </JumpHistory>
     <RunParams>
       <FormatVersion Value="2"/>
       <Modes ActiveMode="default"/>
     </RunParams>
     <HistoryLists Count="3">
-      <List0 Name="LaunchingApplication" Type="File" Count="3">
-        <Item1 Value="C:\Windows\system32\cmd.exe \C ${TargetCmdLine}"/>
-        <Item2 Value="/usr/bin/xterm -T &apos;Lazarus Run Output&apos; -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
-        <Item3 Value="C:\Windows\system32\cmd.exe /C ${TargetCmdLine}"/>
+      <List0 Name="LaunchingApplication" Type="File" Count="4">
+        <Item2 Value="C:\Windows\system32\cmd.exe \C ${TargetCmdLine}"/>
+        <Item3 Value="/usr/bin/xterm -T &apos;Lazarus Run Output&apos; -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
+        <Item4 Value="C:\Windows\system32\cmd.exe /C ${TargetCmdLine}"/>
       </List0>
       <List1 Name="CommandLineParameters" Count="18">
         <Item1 Value="-t 12 -X"/>
@@ -1428,6 +1336,7 @@
         <Item17 Value="-t 4"/>
         <Item18 Value="-t 5"/>
       </List1>
+      <List2 Name="WorkingDirectory" Type="File" Count="1"/>
     </HistoryLists>
   </ProjectSession>
 </CONFIG>
